--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
+    <title>Calculadora</title>
 </head>
 
 <body>
@@ -71,6 +72,7 @@
                     </button>
         </div>
     </div>
+    <script type="module" src="./index.js"></script>
 </body>
 
 </html>
