Fix y reestructuracion de logica

--- a/index.html
+++ b/index.html
@@ -9,68 +9,35 @@
 </head>
 
 <body>
-    <div class="container">
-        <div class="pantalla">
-
+    <div id="app">
+        <div id="simboloOperacion">
+            <p>Operacion actual:</p>
         </div>
+        <input type="text" id="pantalla">
         <div class="teclado">
-            <button>
-                <= </button>
-                    <button>
-                        CE
-                    </button>
-                    <button>
-                        C
-                    </button>
-                    <button>
-                        /
-                    </button>
-                    <button>
-                        7
-                    </button>
-                    <button>
-                        8
-                    </button>
-                    <button>
-                        9
-                    </button>
-                    <button>
-                        *
-                    </button>
-                    <button>
-                        4
-                    </button>
-                    <button>
-                        5
-                    </button>
-                    <button>
-                        6
-                    </button>
-                    <button>
-                        -
-                    </button>
-                    <button>
-                        1
-                    </button>
-                    <button>
-                        2
-                    </button>
-                    <button>
-                        3
-                    </button>
-                    <button>
-                        +
-                    </button>
-                    <button>
-                        0
-                    </button>
-                    <button>
-                        .
-                    </button>
-                    <button>
-                        =
-                    </button>
+            <button id='C'>C</button>
+            <button id='CE'>CE</button>
+            <button id='uno'>1</button>
+            <button id='dos'>2</button>
+            <button id='tres'>3</button>
+            <button id='cuatro'>4</button>
+            <button id='cinco'>5</button>
+            <button id='seis'>6</button>
+            <button id='siete'>7</button>
+            <button id='ocho'>8</button>
+            <button id='nueve'>9</button>
+            <button id='cero'>0</button>
+            <button id='punto'>.</button>
+            <button id='suma'>+</button>
+            <button id='resta'>-</button>
+            <button id='multi'>*</button>
+            <button id='divi'>/</button>
+            <button id='igual'>=</button>
+            <button id="potencia">x<sup>x</sup></button>
+            <button id="cuadrado">x<sup>2</sup></button>
+            <button id="negativo">+ / -</button>
         </div>
+
     </div>
     <script type="module" src="./index.js"></script>
 </body>
